--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@ Anyways, welcome to my website.
     <h3 style="font-size:1em ;"> And the last thing is a Hack Panel (shhhhh!) </h3>
     <h5> Hey, wanna learn some coding? This is a great resource! (I am self thought)</h5>
     <p><code>https://www.w3schools.com</code></p>
-    <h7> Hey, Wanna learn some coding strait from me? Then stick around </h7>
+    <h7> Hey, Wanna learn some coding strait from me? Then stick around! </h7>
     <p sytle="font-size:1em ;"> The first thing we are going to learn is make a button like I did earlier!</p>
-    button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
+    <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
+   
     <p style="font-size:1em ;"> Here's how you do it</p>
     <p><code>button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button></code></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
