--- a/index.html
+++ b/index.html
@@ -50,17 +50,13 @@ Anyways, welcome to my website.
     <h5> Hey, wanna learn some coding? This is a great resource! (I am self thought)</h5>
     <p><code>https://www.w3schools.com</code></p>
     <h5 style="font-size:1em ;"> Or, you can learn some coding here! </h5>
-    <h5 sytle="font-size:1em ;"> The first thing we are going to learn is make a button like I did earlier!</h5>
+    <h5 sytle="font-size:1em ;"> We're gonna learn how to make a button like I posted earlier.</h5>
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
    
     <h5 style="font-size:1em ;"> Here's how you do it</h5>
-    <p><code>button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button></code></p>
+    <p><code>button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button> </code></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <h5 style="font-size:1em ;"> And now, let's learn how to make text smaller using html! </h5> 
-    <h5 style="font-size:2em ;"> Hello! </h5>
-    <h5 style="font-size:1em ;"> Hello, and here's how you do it! </h5>
-    <p><code><h1 style="font-size:1em ;"></code></p>
-    <script defer>
+    
       // Source: https://github.com/Brunozhon/Brunozhon.github.io/blob/main/index.html#L66-L90
       //
       // If you check the original branch at https://github.com/Brunozhon/Brunozhon.github.io/blame/master/index.html#L65-L89, you will discover this code is actually two years old!
