--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ Anyways, welcome to my website.
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
    
     <h5 style="font-size:1em ;"> Here's how you do it</h5>
-    <p><code>button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button> </code></p>
+    <p><code>button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button> </code></p>\
+    <h5 style="font-size:2em ;"> Well, thats it for now. Thank you for visiting! </h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
       // Source: https://github.com/Brunozhon/Brunozhon.github.io/blob/main/index.html#L66-L90
