--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ Anyways, welcome to my website.</pre>
     <p><code>https://www.freecodecamp.org/</code></p>
     <p><code>https://getbootstrap.com/docs/5.0/getting-started/introduction/</code></p>
     <h5 style="font-size:2em ;"> Well, thats it for now. Thank you for visiting! </h5>
+    <h5 style="font-size:1em ;"> MR CASE IS THE BEST TEACHER EVER! </h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
       var asciiArt = [
