--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <h5 style="font-size:2em ;"> Well, thats it for now. Thank you for visiting! </h5>
     <h5 style="font-size:1em ;"> MR.CASE IS THE BEST TEACHER EVER! ALL ABOUT HIM HERE! </h5>
     <p><code>https://www.facebook.com/photo.php?fbid=10159128256737986&id=75692947985&set=a.82352267985</code></p>
+    <h5 style="font-size:1em ;"> Video Of Him (Mr.Case is 100% him)
+      <p><code>https://www.youtube.com/watch?v=5B-ftwU6uOQ</code></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
       var asciiArt = [
