--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
     <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/wvVogLe</code></p>
     <h3 style="font-size:1em ;"> And the last thing is a Hack Panel (shhhhh!) </h3>
+    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/gOVLmoG?editors=1100</code></p>
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><code>https://www.w3schools.com</code></p>
     <p><code>https://www.freecodecamp.org/</code></p>
