--- a/index.html
+++ b/index.html
@@ -1,81 +1,72 @@
-<!DOCTYPE html>
-<html lang="en-US">
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Bruno Zhong's Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <meta name="author" content="Bruno Zhong">
-    <meta name="description" content="About Bruno Zhong">
-    <meta name="keywords" content="Bruno Zhong, About Bruno Zhong, Bruno, Bruno Z">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body data-bs-spy="scroll" data-bs-target="#navbar-example">
-    <nav id="navbar-example" class="navbar navbar-light bg-light px-3 sticky-top" data-bs-offset="0">
-      <a class="navbar-brand" href="#">Bruno Zhong's Website</a>
-      <ul class="nav nav-pills" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link" href="#about-me">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#my-projects">My Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#resources">Resources</a>
-        </li>
-      </ul>
-    </nav>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <pre id="welcome">
-      <noscript>
-Please enable JavaScript.
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Aadhav Guruswamy's Website</title>
+
+    <style>
+      p {
+        font-size: 1em;
+      }
+      
+      h2 {
+        font-size: 2em;
+      } 
+    </style>
+  </head>
+  <body>
+    <h1>Hello!</h1>
+
+    <!-- Source: https://github.com/Brunozhon/Brunozhon.github.io/blob/main/index.html#L27-L35 -->
+    <pre id="welcome">Please enable JavaScript.
 (•_•)
 ( •_•)>⌐■-■
 (⌐■_■)
-Anyways, welcome to my website.
-      </noscript>
-    </pre>
+Sorry about that. Just needed to enable JavaScript and become cool. Anyways, welcome to my website.</pre>
 
-    <div id="about-me">
-      <h2>About Me</h2>
-      <p>Hi! My name is Bruno Zhong. I am 11 years old. I know five programming languages: HTML, CSS, JavaScript, Swift, and Python.</p>
-      <p><img src="img/IMG_1142.JPG" width="500"></p>
-    </div>
-
-    <div id="my-projects">
-      <h2>My Projects</h2>
-      <h3>Web Pong</h3>
-      <p><img src="img/pong.png" width="500"></p>
-      <p>Pong, but in the web.</p>
-      <p><a href="https://brunozhon.github.io/webPong/">Play some pong!</a></p>
-      <h3>Bomb Dodgers</h3>
-      <p><img src="img/bomb-dodgers.png" width="500"></p>
-      <p>A <a href="https://phaser.io/">Phaser</a>-based game where you dodge bombs.</p>
-      <p><a href="https://brunozhon.github.io/bombDodgers/">Dodge some bombs!</a></p>
-    </div>
-
-    <div id="resources">
-      <h2>Resources</h2>
-      <p>Want to learn programming? Check out these resources:</p>
-      <ul>
-        <li><a href="https://www.w3schools.com/">W3Schools</a> (for beginner programmers)</li>
-        <li><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a> (for intermediate programmers)</li>
-        <li><a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap</a> (for styling websites)</li>
-        <li><a href="https://jquery.com/">jQuery</a> (never used it before, but should be good)</li>
-      </ul>
-    </div>
-
+    
+    <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
+    <h2>About Me</h2>
+    <p>My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil, English, Spanish, HTML, and JavaScript.</p>
+    <!-- Argubly more of a suprise if it has rainbow text! -->
+    <h2><span style="color:#FF0000">H</span><span style="color:#FF4600">e</span><span style="color:#FF8B00">r</span><span style="color:#FFD100">e</span><span style="color:#E8FF00">'</span><span style="color:#A2FF00">s</span> <span style="color:#5DFF00">a</span> <span style="color:#17FF00">s</span><span style="color:#00FF2E">u</span><span style="color:#00FF74">r</span><span style="color:#00FFB9">p</span><span style="color:#00FFFF">r</span><span style="color:#00B9FF">i</span><span style="color:#0074FF">s</span><span style="color:#002EFF">e</span> <span style="color:#1700FF">f</span><span style="color:#5D00FF">o</span><span style="color:#A200FF">r</span> <span style="color:#E800FF">y</span><span style="color:#FF00D1">o</span><span style="color:#FF008B">u</span><span style="color:#FF0046">!</span></h2>
+    <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;v&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <h1 style="font-size:2em ;"> Here's some of my coding projects! </h1>
+<h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
+    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/LYwNeZL?editors=1000</code></p>
+    <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
+    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/wvVogLe</code></p>
+    <h3 style="font-size:1em ;"> And here's a game that I made which is pretty much pong, but in the web </h3>
+    <p><a href="https://brunozhon.github.io/webPong/">Play some pong!</a></p>
+    <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
+    <p><code>https://www.w3schools.com</code></p>
+    <p><code>https://www.freecodecamp.org/</code></p>
+    <p><code>https://getbootstrap.com/docs/5.0/getting-started/introduction/</code></p>
+    <h5 style="font-size:2em ;"> Well, thats it for now. Thank you for visiting! </h5>
+    <h5 style="font-size:1em ;"> MR.CASE IS THE BEST TEACHER EVER! ALL ABOUT HIM HERE! </h5>
+    <p><code>https://www.facebook.com/photo.php?fbid=10159128256737986&id=75692947985&set=a.82352267985</code></p>
+    <h5 style="font-size:1em ;"> Video Of Him (Mr.Case is 100% him)
+      <p><code>https://www.youtube.com/watch?v=5B-ftwU6uOQ</code></p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
       var asciiArt = [
         `|‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾|
-| WELCOME TO MY WEBSITE! |
+| WELCOME TO MY WEBSITE |
 |________________________|
 (\\__/) || 
 (•ㅅ•) || 
 /    づ`,
-        `Welcome to — oops, sorry…
+        `Welcome to my — oops, sorry…
 (•_•)
 ( •_•)>⌐■-■
 (⌐■_■)
-Now, welcome to my website!`,
+Now, welcome to my  website!`,
         `(•_•)
 <)   )╯WELCOME
  /    \\ 
@@ -86,8 +77,7 @@ Now, welcome to my website!`,
 <)   )╯WEBSITE
  /    \\`
       ]
-      document.getElementById("welcome").innerHTML = asciiArt[Math.floor(Math.random() * 3)]
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
+
