--- a/index.html
+++ b/index.html
@@ -39,22 +39,20 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;v&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <h1 style="font-size:2em ;"> Here's some of my coding projects! </h1>
 <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
-    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL</code></p>
+    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">Click On This!</a></p>
     <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys)</h3>
-    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM</code></p>
+    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM">Click On This!</a></p>
     <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
-    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe</code></p>
-    <h3 style="font-size:1em ;"> And here's a game that I made which is pretty much pong, but in the web </h3>
-    <p><a href="file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/WebPong.html">Play some pong!</a></p>
+    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM">Click On This!</a></p>
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
-    <p><code>https://www.w3schools.com</code></p>
-    <p><code>https://www.freecodecamp.org/</code></p>
-    <p><code>https://getbootstrap.com/docs/5.0/getting-started/introduction/</code></p>
+    <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
+    <p><a href="https://www.freecodecamp.org/">Free Code Camp!</a></p>
+    <p><a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/">A Great Website Starter!</a></p>
     <h5 style="font-size:2em ;"> Well, thats it for now. Thank you for visiting! </h5>
     <h5 style="font-size:1em ;"> MR.CASE IS THE BEST TEACHER EVER! ALL ABOUT HIM HERE! </h5>
-    <p><code>https://www.facebook.com/photo.php?fbid=10159128256737986&id=75692947985&set=a.82352267985</code></p>
+    <p><a href="https://www.facebook.com/photo.php?fbid=10159128256737986&id=75692947985&set=a.82352267985">About Him Here!</p>
     <h5 style="font-size:1em ;"> Video Of Him (Mr.Case is 100% him)
-      <p><code>https://www.youtube.com/watch?v=5B-ftwU6uOQ</code></p>
+    <p><a href="https://www.youtube.com/watch?v=5B-ftwU6uOQ">Case Wars!</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
       var asciiArt = [
