--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+     <title>Aadhav Guruswamy's Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="author" content="Aadhav Guruswamy">
+    <meta name="description" content="About Me">
+    <meta name="keywords" content="Aadhav Guruswamy, About Aadhav Guruswamy,Aadhav,Aadhav G">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body data-bs-spy="scroll" data-bs-target="#navbar-example">
+    <nav id="navbar-example" class="navbar navbar-light bg-light px-3 sticky-top" data-bs-offset="0">
+      <a class="navbar-brand" href="#">Aadhav Guruswamy's Website</a>
+      <ul class="nav nav-pills" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link" href="#about-me">About Me!</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#my-projects">My Coding Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#resources">Learn Some Coding!</a>
+        </li>
+      </ul>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Aadhav Guruswamy's Website</title>
 
     <style>
       p {
